k8s/alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-service
  labels:
    app: alert-service
spec:
  type: ClusterIP
  selector:
    app: alert-service
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
