k8s/price-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-service
  labels:
    app: price-service
spec:
  type: ClusterIP
  selector:
    app: price-service
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
